Add existing file

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -16,7 +16,7 @@ rtmp {
 #    allow publish 192.168.0.0/24;
 #    deny publish all;
 
-    application stream1 {
+    application input {
 	live on;
 	meta copy;
 	push_reconnect 1s;
@@ -44,7 +44,7 @@ rtmp {
     hls_playlist_length 10s;	
     hls_sync 100ms;	
 
-	pull rtmp://localhost:1935/stream1/input name=input static live=1;
+	pull rtmp://localhost:1935/input/stream1 name=input static live=1;
    }
 
 	application distribute {
