Multi-destination, no longer limited to two

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -16,12 +16,27 @@ rtmp {
 #    allow publish 192.168.0.0/24;
 #    deny publish all;
 
-    application input {
+    application output {
+	live on;
+	meta copy;
+	push_reconnect 1s;
+	idle_streams off;
+#	drop_idle_publisher 120s;
+
+	recorder rec {  record off;
+                record_suffix .flv;
+                record_path /usr/local/nginx/html/recording/;
+                record_unique on;
+#                record_interval 30m;
+                }
+	}
+	
+	application input {
 	live on;
 	meta copy;
 	push_reconnect 1s;
 #	idle_streams off;
-	drop_idle_publisher 120s;
+	drop_idle_publisher 5s;
 
 	recorder rec {  record off;
                 record_suffix .flv;
@@ -31,6 +46,14 @@ rtmp {
                 }
 	}
 
+	application distribute {
+	live on;
+	meta copy;
+	push_reconnect 1s;
+	idle_streams off;
+#	drop_idle_publisher 5s;
+   }
+   
     application live {
     live on;
     meta copy;
@@ -45,14 +68,6 @@ rtmp {
     hls_sync 100ms;	
 
 	pull rtmp://localhost:1935/input/stream1 name=input static live=1;
-   }
-
-	application distribute {
-	live on;
-	meta copy;
-	push_reconnect 1s;
-	idle_streams off;
-#	drop_idle_publisher 10s;
    }
 
 #	UNCOMMENT BELOW FOR INSTAGRAM
