Add destination control panel

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -20,7 +20,7 @@ rtmp {
 	live on;
 	meta copy;
 	push_reconnect 1s;
-	idle_streams off;
+#	idle_streams off;
 #	drop_idle_publisher 120s;
 
 
@@ -37,7 +37,7 @@ rtmp {
 	meta copy;
 	push_reconnect 1s;
 	idle_streams off;
-#	drop_idle_publisher 5s;
+	drop_idle_publisher 5s;
 
 	recorder rec {  record off;
                 record_suffix .flv;
