Updated insta off, deleted old scripts

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -82,7 +82,7 @@ rtmp {
     hls_playlist_length 10s;	
     hls_sync 100ms;	
 
-	pull rtmp://localhost:1935/input/stream1 name=input static live=1;
+	pull rtmp://localhost:1935/distribute/stream1 name=input static live=1;
    }
 
   }
