Updated config with recorder and destiantions over 10

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -71,6 +71,21 @@ rtmp {
                 }
 	}
 
+	application recording {
+	live on;
+	meta copy;
+	push_reconnect 1s;
+#	idle_streams off;
+	drop_idle_publisher 5s;
+
+	recorder rec {  record all;
+                record_suffix .flv;
+                record_path /usr/local/nginx/html/recording/;
+                record_unique on;
+#                record_interval 120m;
+                }
+	}
+
    
     application live {
     live on;
