Changes for seamless transfer

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -31,8 +31,8 @@ rtmp {
 #                record_interval 30m;
                 }
 	}
-	
-	application input {
+
+	application main {
 	live on;
 	meta copy;
 	push_reconnect 1s;
@@ -46,21 +46,35 @@ rtmp {
                 record_interval 30m;
                 }
 	}
+	
+	application input {
+	live on;
+	meta copy;
+	push_reconnect 1s;
+#	idle_streams off;
+	drop_idle_publisher 5s;
 
-
+	recorder rec {  record off;
+                record_suffix .flv;
+                record_path /usr/local/nginx/html/recording/;
+                record_unique on;
+                record_interval 30m;
+                }
+	}
+	
 	application distribute {
 	live on;
 	meta copy;
 	push_reconnect 1s;
-	idle_streams off;
-#	drop_idle_publisher 5s;
+#	idle_streams off;
+	drop_idle_publisher 10s;
    }
 
 	application backup {
 	live on;
 	meta copy;
 	push_reconnect 1s;
-#	idle_streams off;
+	idle_streams off;
 	drop_idle_publisher 5s;
 
 	recorder rec {  record off;
@@ -97,7 +111,7 @@ rtmp {
     hls_playlist_length 10s;	
     hls_sync 100ms;	
 
-	pull rtmp://localhost:1935/distribute/stream1 name=input static live=1;
+	pull rtmp://localhost:1935/main/stream1 name=input static live=1;
    }
 
   }
