nginx log level set to emerg from debug

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,7 +1,7 @@
 user root;
 worker_processes  1;
 
-error_log  logs/rtmp_error.log debug;
+error_log  logs/rtmp_error.log emerg;
 pid        logs/nginx.pid;
 
 events {
