Convertrecording added for flv to mp4

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -93,10 +93,12 @@ rtmp {
 	drop_idle_publisher 5s;
 
 	recorder rec {  record all;
-                record_suffix .flv;
+                record_suffix -%Y%m%d-%H_%M_%S.flv;
                 record_path /usr/local/nginx/html/recording/;
-                record_unique on;
+                record_unique off;
 #                record_interval 120m;
+                exec_record_done bash -c "/usr/local/nginx/scripts/config.sh convertrecording $path $dirname $basename";
+#                exec_record_done ffmpeg -y -i $path -c copy $dirname/$basename.mp4;
                 }
 	}
 
