--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,27 @@
-version: '3'
+version: "3"
 
 services:
-    nginx:
-        build: 
-            context: ./nginx
-            dockerfile: Dockerfile
-        container_name: 'nginx-mls'
-        ports:
-            - 8080:80
-        volumes:
-            - ./nginx/nginx.conf:/etc/nginx/nginx.conf.template
-            - ./html:/www/static
-        depends_on:
-          - php
-        networks:
-            - internal
+  nginx:
+    image: alfg/nginx-rtmp:v1.6.0
+    container_name: "nginx-mls"
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf.template
+      - ./html:/www/static
+    depends_on:
+      - php
+    networks:
+      - internal
 
-    php:
-        image: php:fpm-alpine
-        container_name: 'php-mls'
-        volumes:
-            - ./html:/www/static
-        networks:
-            - internal
+  php:
+    image: php:7.0-fpm-alpine
+    container_name: "php-mls"
+    volumes:
+      - ./html:/www/static
+    networks:
+      - internal
 
 networks:
-    internal:
-        driver: bridge
+  internal:
+    driver: bridge
