--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ rtmp {
 
 				record off;
 				record_suffix .flv;
-				record_path /www/static/recording;
+				record_path /app/html/recording;
 				record_unique on;
 				# record_interval 30m;
 			}
@@ -40,7 +40,7 @@ rtmp {
 
 				record off;
 				record_suffix .flv;
-				record_path /www/static/recording;
+				record_path /app/html/recording;
 				record_unique on;
 				record_interval 30m;
 			}
@@ -57,7 +57,7 @@ rtmp {
 
 				record off;
 				record_suffix .flv;
-				record_path /www/static/recording;
+				record_path /app/html/recording;
 				record_unique on;
 				record_interval 30m;
 			}
@@ -82,7 +82,7 @@ rtmp {
 
 				record off;
 				record_suffix .flv;
-				record_path /www/static/recording;
+				record_path /app/html/recording;
 				record_unique on;
 				# record_interval 30m;
 			}
@@ -99,7 +99,7 @@ rtmp {
 
 				record all;
 				record_suffix -%Y%m%d-%H_%M_%S.flv;
-				record_path /www/static/recording;
+				record_path /app/html/recording;
 				record_unique off;
 				# record_interval 120m;
 				exec_record_done bash -c "/usr/local/nginx/scripts/config.sh convertrecording $path $dirname $basename";
@@ -126,7 +126,7 @@ rtmp {
 
 ############### FOR CONTROL PAGE ##################
 http {
-    root /www/static;
+    root /app/html;
     sendfile off;
     tcp_nopush on;
     server_tokens off;
@@ -158,13 +158,13 @@ http {
 		}
 
 		location /css {
-            alias /www/static/css;
+            alias /app/html/css;
             types {
                 text/css css;
             }
         }
         location /img {
-            alias /www/static/img;
+            alias /app/html/img;
             types {
                 image/jpeg jpg jpeg;
                 image/png png;
@@ -217,7 +217,7 @@ http {
 #       }
 
         location /live {
-          alias /www/static/hls;
+          alias /app/html/hls;
           types {
               application/vnd.apple.mpegurl m3u8;
               video/mp2t ts;
@@ -232,8 +232,23 @@ http {
 			allow 127.0.0.1;
         }
 
+        location /stat.xml {
+            rtmp_stat all;
+			allow 127.0.0.1;
+        }
+
+        location /stat-test.xml {
+        	root /app/html;
+			allow 127.0.0.1;
+        }
+
+        location /config.txt {
+            root /app/scripts;
+        }
+
+
         location /stat.xsl {
-            root /www/static;
+            root /app/html;
         }
 
         location /crossdomain.xml {
@@ -251,7 +266,7 @@ http {
 		error_page 500 502 503 504 /50x.html;
 		location = /50x.html {
 
-			root /www/static;
+			root /app/html;
 		}
     }
 }
