--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -166,22 +166,22 @@ http {
 
 		# rtmp statistics
 		location /stat {
-
 			rtmp_stat all;
 			rtmp_stat_stylesheet stat.xsl;
 			allow 127.0.0.1;
 		}
 
-		location /stat.xsl {
+		location /stat.xml {
+			rtmp_stat all;
+		}
 
+		location /stat.xsl {
 			# you can move stat.xsl to a different location
 			root html;
 		}
 
 		location /live {
-
 			types {
-
 				application/vnd.apple.mpegurl m3u8;
 				video/mp2t ts;
 			}
@@ -190,7 +190,6 @@ http {
 		}
 
 		location / {
-
 			#types {
 			#	application/xslt+xml xsl;
 			#}
