--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -180,6 +180,12 @@ http {
 			root html;
 		}
 
+		location /config.txt {
+			root /usr/local/nginx/scripts;
+		}
+
+
+
 		location /live {
 			types {
 				application/vnd.apple.mpegurl m3u8;
