seccond attempt to fix fetch bug

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -187,6 +187,7 @@ http {
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
+            expires -1;
         }
 #       location ~ [^/]\.php(/|$) {
 #           fastcgi_split_path_info ^(.+?\.php)(/.*)$;
@@ -230,18 +231,22 @@ http {
             rtmp_stat all;
             rtmp_stat_stylesheet stat.xsl;
 			allow 127.0.0.1;
+            expires -1;
         }
 
         location /stat.xml {
             rtmp_stat all;
+            expires -1;
         }
 
         location /stat-test.xml {
         	root /app/html;
+            expires -1;
         }
 
         location /config.txt {
             root /app/scripts;
+            expires -1;
         }
 
 
