--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["Elem", "jsmpeg", "lowerthirds", "rtmp"]
+	"cSpell.words": ["Elem", "jsmpeg", "lowerthirds", "nofailover", "rtmp"]
 }
