csv header bug fix

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -211,6 +211,12 @@ http {
 			autoindex_localtime on;
 		}
 
+        location ~ \.csv$ {
+            types {
+                text/plain csv;
+            }
+        }
+
 		location ~ \.php$ {
 
 			try_files $uri =404;
